syntax="proto3";
package ConfigManager;


service ConfigManager {
  rpc getMQTTConfig(NoParam) returns (MQTTConfigResponse);
  rpc getModbusTCPConfig(NoParam) returns (ModbusTCPConfigResponse);
}

message NoParam {};


message Socket {
  string ip=1;
  uint32 port=2;
};


message ModbusTCPConfigResponse {
  Socket modbusTCPServerConfig=1;
  Socket mqttServerConfig=2;
}


message MQTTConfigResponse {
  Socket mqttServerConfig=1;
  Socket brokerConfig=2;
};